adding profile and order page

--- a/PackageFoodManagementSystem.Application/Views/Shared/_StoreManagerSidebar.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/Shared/_StoreManagerSidebar.cshtml
@@ -7,8 +7,9 @@
                 🏠 Dashboard
             </a>
         </li>
+
         <li>
-            <a asp-controller="Store" asp-action="AddProductcd pcd">
+            <a asp-controller="Store" asp-action="AddProduct">
 
                 📦 Products
             </a>
