--- a/PackageFoodManagementSystem.Application/Views/StoreManager/Home.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/StoreManager/Home.cshtml
@@ -11,8 +11,10 @@ ViewData["Title"] = "Dashboard";
     <h4>| Store Name</h4>
     <input type="text" placeholder="Search" />
     <div class="icons">
+        <a asp-controller="StoreManager" asp-action="Profile">
+            👤 
 
-        🔔 👤
+        </a>
     </div>
 </div>
 <!-- Cards -->
