--- a/PackageFoodManagementSystem.Application/Views/Shared/_Layout.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="~/PackageFoodManagementSystem.Application.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
+    @*<header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PackageFoodManagementSystem.Application</a>
@@ -32,12 +32,13 @@
                 </div>
             </div>
         </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    </header>*@
+    <div class="app-container">
+        @await Html.PartialAsync("_StoreManagerSidebar")
+
+        <div class="content">
             @RenderBody()
-        </main>
-    </div>
+        </div>
 
     </div>
 
