Added user uthentication

--- a/PackageFoodManagementSystem.Application/Views/Shared/_AdminLayout.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/Shared/_AdminLayout.cshtml
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="store-layout">
-        @await Html.PartialAsync("_StoreManagerSidebar")
+        @await Html.PartialAsync("_AdminLayoutSidebar")
 
         <main class="store-content">
             @RenderBody()
