--- a/PackageFoodManagementSystem.Application/Views/Shared/_StoreManagerlayout.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/Shared/_StoreManagerlayout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <link rel="stylesheet" href="~/css/side.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/storemanager.css" asp-append-version="true" />
+
 </head>
 <body>
     <div class="store-layout">
