--- a/PackageFoodManagementSystem.Application/Views/Shared/_StoreManagerSidebar.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/Shared/_StoreManagerSidebar.cshtml
@@ -39,12 +39,19 @@
                 📑 Reports
             </a>
         </li>
+        <li>
+            <a asp-controller="Account" asp-action="Settings">⚙ Settings</a>
+        </li>
+        <li>
+            <a asp-controller="Home" asp-action="SignIn">🚪 Log Out</a>
+            </a>
+        </li>
     </ul>
 
-    <div class="sidebar-footer">
-        <a asp-controller="Account" asp-action="Settings">⚙ Settings</a>
-        <a asp-controller="Home" asp-action="SignIn">🚪 Log Out</a>
-        @* <a asp-controller="Home" asp-action="SignIn" class="nav-btn">🚪 Log Out</a> *@
-    </div>
+    @* <div class="sidebar-footer">
+        
+        
+        <a asp-controller="Home" asp-action="SignIn" class="nav-btn">🚪 Log Out</a>
+    </div> *@
 </div>
 
