--- a/PackageFoodManagementSystem.Application/Views/StoreManager/Profile.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/StoreManager/Profile.cshtml
@@ -8,11 +8,11 @@
     <div class="profile-card">
         <div class="profile-row">
             <label>Name</label>
-            <span>John Doe</span>
+            <span>Sunil Karad</span>
         </div>
         <div class="profile-row">
             <label>Email</label>
-            <span>storemanager@gmail.com</span>
+            <span>sunilkarad123@gmail.com</span>
         </div>
         <div class="profile-row">
             <label>Phone</label>
@@ -20,7 +20,7 @@
         </div>
         <div class="profile-row">
             <label>Store Name</label>
-            <span>ABC Super Store</span>
+            <span>Sunil Super Store</span>
         </div>
         <div class="profile-row">
             <label>Role</label>
