--- a/PackageFoodManagementSystem.Application/Views/StoreManager/Settings.cshtml
+++ b/PackageFoodManagementSystem.Application/Views/StoreManager/Settings.cshtml
@@ -1,4 +1,17 @@
-﻿@page
-@model PackageFoodManagementSystem.Application.Views.StoreManager.SettingsModel
-@{
+﻿@{
+    ViewData["Title"] = "Settings";
+
+    Layout = "~/Views/Shared/_StoreManagerlayout.cshtml";
+
 }
+<!-- Header -->
+<div class="topbar">
+    <h4>| Store Name</h4>
+    <input type="text" placeholder="Search" />
+    <div class="icons">
+        <a asp-controller="StoreManager" asp-action="Profile">
+            👤
+
+        </a>
+    </div>
+</div>
